update vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "cmd/main/main.go",
+      "src": "app/index.go",
       "use": "@vercel/go"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "cmd/main/main.go"
+      "dest": "app/index.go"
     }
   ],
   "build": {
